--- a/Index.html
+++ b/Index.html
@@ -198,6 +198,32 @@
 					</div>
 				</section>
 
+				<section class="wrapper style1 align-center">
+					<div class="inner medium">
+						<h2>Let's Talk</h2>
+						<form method="post" action="https://submit-form.com/avR4LXtQ">
+							<div class="fields">
+								<div class="field half">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" value="" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="email" name="email" id="email" value="" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="6"></textarea>
+								</div>
+							</div>
+							<ul class="actions special">
+								<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+							</ul>
+						</form>
+
+					</div>
+				</section>
+
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
